--- a/index.html
+++ b/index.html
@@ -6,24 +6,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
     <!-- Customized css -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Caravan</title>
 </head>
 
 <body>
-    <nav class="navbar bg-light navbar-light navbar-expand-md">
+    <!-- NAVBAR INICIO -->
+    <nav class="navbar bg-light navbar-light navbar-expand-md box-shadow fixed-top">
         <a href="index.html" class="navbar-brand my-2">
             <img src="img/caravan.svg" alt="Caravan">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navSupportedContent" aria-controls="navSupportedContent" aria-expanded="false" aria-label="Abrir navegação">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navSupportedContent"
+            aria-controls="navSupportedContent" aria-expanded="false" aria-label="Abrir navegação">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div id="navSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="navbar-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Locais</a>
+                    <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Locais</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a href="#" class="dropdown-item">California</a>
                         <a href="#" class="dropdown-item">Paris</a>
@@ -38,7 +42,8 @@
         </div>
         </button>
         <!-- Modal -->
-        <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+            aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -51,24 +56,83 @@
                         <form>
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Email</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="ex: fulano@provedor.com">
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                                    placeholder="ex: fulano@provedor.com">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Senha</label>
                                 <input type="password" class="form-control" id="exampleInputPassword1">
                             </div>
                             <button type="submit" class="btn btn-primary">Entrar na Conta</button>
-                            <small id="emailHelp" class="form-text text-muted">Esqueceu a senha? <a href="#">Clique aqui</a></small>
+                            <small id="emailHelp" class="form-text text-muted">Esqueceu a senha? <a href="#">Clique
+                                    aqui</a></small>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
     </nav>
+    <!-- NAVBAR FIM -->
+
+    <!-- SHOWCASE INICIO -->
+    <div class="container-fluid bg-dark">
+        <div class="row">
+            <div class="col-lg-7 p-0">
+                <div id="carouselHoteis" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselHoteis" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselHoteis" data-slide-to="1"></li>
+                        <li data-target="#carouselHoteis" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="img/dublin.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="img/paris.jpg" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="img/california.jpg" alt="Third slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselHoteis" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselHoteis" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
+            </div>
+            <div class="col-lg-5 text-white align-self-center p-4">
+                <h1 class="display-4">Realize a viagem do seu sonho</h1>
+                <p class="lead">O melhor local para viajar é com a Caravan, mais de 5.000 excursões concluídas.</p>
+
+                <div class="input-group input-group-lg mb-3">
+                    <input type="text" class="form-control" placeholder="Digite o seu e-mail" aria-label="Digite o seu e-mail"
+                        aria-describedby="basic-addon2">
+                    <div class="input-group-append ">
+                        <button class="btn btn-primary ml-n1" type="button">Inscreva-se</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- SHOWCASE FIM -->
+
+
+
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="js/jquery-3.2.1.slim.min.js"></script>
-    <script type="text/javascript" src="js/popper.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <!-- Optional JavaScript -->
     <script type="text/javascript" src="js/app.js"></script>
 </body>
