--- a/index.html
+++ b/index.html
@@ -123,7 +123,67 @@
     </div>
     <!-- SHOWCASE FIM -->
 
+    <!-- VANTAGENS INICIO -->
+    <section class="py-5 bg-light text-center">
+        <div class="container">
+            <div class="my-5">
+                <span class="h6 d-block">TUDO DE MELHOR PARA VOCÊ</span>
+                <h2 class="text-primary display-4">Aproveite as Vantagens</h2>
+            </div>
 
+            <div class="row">
+                <div class="col-xl-4 col-md-6">
+                    <div style="height: 100px;" class="d-flex justify-content-center">
+                        <img src="img/icones/passaporte.svg" alt="Passaporte">
+                    </div>
+                    <h3>Documentos</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, nemo nulla.</p>
+                </div>
+
+                <div class="col-xl-4 col-md-6">
+                    <div style="height: 100px;" class="d-flex justify-content-center">
+                        <img src="img/icones/passagens.svg" alt="Passaporte">
+                    </div>
+                    <h3>Passagens</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, nemo nulla.</p>
+                </div>
+
+                <div class="col-xl-4 col-md-6">
+                    <div style="height: 100px;" class="d-flex justify-content-center">
+                        <img src="img/icones/translado.svg" alt="Passaporte">
+                    </div>
+                    <h3>Translado</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, nemo nulla.</p>
+                </div>
+
+                <div class="col-xl-4 col-md-6">
+                    <div style="height: 100px;" class="d-flex justify-content-center">
+                        <img src="img/icones/praias.svg" alt="Passaporte">
+                    </div>
+                    <h3>Praias</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, nemo nulla.</p>
+                </div>
+
+                <div class="col-xl-4 col-md-6">
+                    <div style="height: 100px;" class="d-flex justify-content-center">
+                        <img src="img/icones/bagagens.svg" alt="Passaporte">
+                    </div>
+                    <h3>Bagagens</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, nemo nulla.</p>
+                </div>
+
+                <div class="col-xl-4 col-md-6">
+                    <div style="height: 100px;" class="d-flex justify-content-center">
+                        <img src="img/icones/turismo.svg" alt="Passaporte">
+                    </div>
+                    <h3>Turismo</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, nemo nulla.</p>
+                </div>
+            </div>
+            <a href="planos.html" class="btn btn-primary btn-lg mt-4">Comprar Plano</a>
+        </div>
+    </section>
+    <!-- VANTAGENS FIM -->
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
