--- a/index.html
+++ b/index.html
@@ -14,6 +14,35 @@
 </head>
 
 <body>
+    <!-- Modal -->
+    <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="modalLoginTitulo" aria-hidden="true">
+        <div class=" modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Entre na Sua Conta</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                                placeholder="ex: fulano@provedor.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Senha</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Entrar na Conta</button>
+                        <small id="emailHelp" class="form-text text-muted">Esqueceu a senha? <a href="#">Clique
+                                aqui</a></small>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- NAVBAR INICIO -->
     <nav class="navbar bg-light navbar-light navbar-expand-md box-shadow fixed-top">
         <a href="index.html" class="navbar-brand my-2">
@@ -41,36 +70,6 @@
             </ul>
         </div>
         </button>
-        <!-- Modal -->
-        <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLongTitle">Entre na Sua Conta</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Email</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                                    placeholder="ex: fulano@provedor.com">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputPassword1">Senha</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1">
-                            </div>
-                            <button type="submit" class="btn btn-primary">Entrar na Conta</button>
-                            <small id="emailHelp" class="form-text text-muted">Esqueceu a senha? <a href="#">Clique
-                                    aqui</a></small>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
     </nav>
     <!-- NAVBAR FIM -->
 
