implementa o blockquote da pagina home

--- a/index.html
+++ b/index.html
@@ -184,6 +184,21 @@
     </section>
     <!-- VANTAGENS FIM -->
 
+    <!-- QUOTE INICIO -->
+    <section id="home-quote" class="p-md-5">
+        <blockquote class="text-white text-center blockquote p-md-5 p-3">
+            <p class="display-4">
+                <em>
+                    "A felicidade não está na estrada que leva a algum lugar. A felicidade é a própria estrada."
+                </em>
+            </p>
+            <footer class="blockquote-footer text-white">
+                Bob Dylan
+            </footer>
+        </blockquote>
+
+    </section>
+    <!-- QUOTE FIM -->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
