--- a/index.html
+++ b/index.html
@@ -448,6 +448,72 @@
     </section>
     <!-- FAQ FIM -->
 
+    <!-- RODAPÉ INICIO -->
+    <footer class="bg-dark text-white">
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-6 col-md-3">
+            <h4 class="h6">PÁGINAS</h4>
+            <ul class="list-unstyled">
+              <li><a href="planos.html">Planos</a></li>
+              <li><a href="contato.html">Contato</a></li>
+              <li><a href="inscricao.html">Inscreva-se</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md-3">
+            <h4 class="h6">LOCAIS</h4>
+            <ul class="list-unstyled">
+              <li><a href="local.html">California</a></li>
+              <li><a href="local.html">Paris</a></li>
+              <li><a href="local.html">Dublin</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md-4">
+            <h4 class="h6">DADOS DE CONTATO</h4>
+            <ul class="list-unstyled text-secondary">
+              <li>caravan@caravan.com.br</li>
+              <li>13 99999-9999</li>
+              <li>De Seg. à Sex. das 8h às 18h</li>
+            </ul>
+          </div>
+          <div class="col-6 col-md-2">
+            <h4 class="h6">REDES SOCIAIS</h4>
+            <ul class="list-unstyled">
+              <li>
+                <a
+                  href="#"
+                  class="btn btn-outline-secondary btn-block btn-sm mb-2"
+                  style="max-width: 140px;"
+                  >Facebook</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="btn btn-outline-secondary btn-block btn-sm mb-2"
+                  style="max-width: 140px;"
+                  >Paris</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="btn btn-outline-secondary btn-block btn-sm mb-2"
+                  style="max-width: 140px;"
+                  >Dublin</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-primary text-center py-3">
+        <p class="mb-0">Caravan © 2017. Alguns direitos reservados.</p>
+      </div>
+    </footer>
+    <!-- RODAPÉ FIM -->
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
