--- a/local.html
+++ b/local.html
@@ -83,7 +83,7 @@
   </nav>
   <!-- NAVBAR FIM -->
   <!-- GALERIA INICIO -->
-  <section class="bg-light py-5">
+  <section class="bg-light mb-5">
     <div class="container">
       <div class="text-center my-5">
         <span class="h6 d-block">O MELHOR DESTINO DA SUA VIAGEM</span>
@@ -110,6 +110,60 @@
   </section>
   <!-- GALERIA FIM -->
 
+  <!-- TABELA INICIO -->
+  <section class="bg-light my-5">
+    <div class="text-center my-5">
+      <span class="h6 d-block">DESCUBRA O QUE ACONTECE NA CIDADE</span>
+      <h2 class="display-4 text-primary">Próximos Eventos</h2>
+    </div>
+
+    <div class="container text-center">
+
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Data</th>
+            <th scope="col">Evento</th>
+            <th scope="col">Local</th>
+            <th scope="col">Ticket</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">23/03</th>
+            <td>Julien Baker</td>
+            <td>The Academy</td>
+            <td><a href="#" class="btn btn-outline-secondary btn-sm">Comprar Ticket</a></td>
+          </tr>
+          <tr>
+            <th scope="row">10/04</th>
+            <td>Veronica Akhtar</td>
+            <td>Great Lakegon</td>
+            <td><a href="#" class="btn btn-outline-secondary btn-sm">Comprar Ticket</a></td>
+          </tr>
+          <tr>
+            <th scope="row">15/04</th>
+            <td>Blanche West</td>
+            <td>Gaston</td>
+            <td><a href="#" class="btn btn-outline-secondary btn-sm">Comprar Ticket</a></td>
+          </tr>
+          <tr>
+            <th scope="row">18/06</th>
+            <td>Homer Burch</td>
+            <td>Xebern</td>
+            <td><a href="#" class="btn btn-outline-secondary btn-sm">Comprar Ticket</a></td>
+          </tr>
+          <tr>
+            <th scope="row">20/09</th>
+            <td>Jobe Lawrence</td>
+            <td>Conron</td>
+            <td><a href="#" class="btn btn-outline-secondary btn-sm">Comprar Ticket</a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+  <!-- TABELA FIM -->
 
 
 
