implementa conteudo da pagina contato

--- a/local.html
+++ b/local.html
@@ -204,10 +204,10 @@
               <a href="#" class="btn btn-outline-secondary btn-block btn-sm mb-2" style="max-width: 140px;">Facebook</a>
             </li>
             <li>
-              <a href="#" class="btn btn-outline-secondary btn-block btn-sm mb-2" style="max-width: 140px;">Paris</a>
+              <a href="#" class="btn btn-outline-secondary btn-block btn-sm mb-2" style="max-width: 140px;">Twitter</a>
             </li>
             <li>
-              <a href="#" class="btn btn-outline-secondary btn-block btn-sm mb-2" style="max-width: 140px;">Dublin</a>
+              <a href="#" class="btn btn-outline-secondary btn-block btn-sm mb-2" style="max-width: 140px;">Youtube</a>
             </li>
           </ul>
         </div>
