--- a/contato.html
+++ b/contato.html
@@ -85,82 +85,62 @@
   </nav>
   <!-- NAVBAR FIM -->
 
-  <!-- PLANOS INICIO -->
-  <section class="mb-5">
-    <div class="text-center my-5">
-      <span class="h6 d-block">SEU PLANO, SUA VIAGEM</span>
-      <h2 class="display-4 text-primary">Escolha o Plano</h2>
+  <!-- FALE CONOSCO INICIO -->
+  <section>
+    <div class="text-center py-5">
+      <span class="h6 d-block">POSSUI ALGUMA DÚVIDA?</span>
+      <h2 class="display-4 text-primary">Fale Conosco</h2>
     </div>
 
-    <div class="container">
+    <div class="container  mb-5">
       <div class="row">
-        <div class="col-md mb-5">
-          <div class="bg-light rounded p-4 box-shadow">
-            <h2>Gold</h2>
-            <ul class="list-unstyled lista-plano">
-              <li>
-                <span data-toggle="tooltip" data-placement="top" title
-                  data-original-title="Isso mesmo, são 30 dias totais durante a viagem.">→
-                  30 dias de viagem
-                </span>
-              </li>
-              <li> → 3 destinos diferentes</li>
-              <li>→ Tudo pago pela empresa</li>
-              <li>→ Ingressos para festas</li>
-            </ul>
-            <form>
-              <div class="form-group">
-                <select class="form-control bg-light" id="inputCidades">
-                  <option>Selecione a cidade</option>
-                  <option>California</option>
-                  <option>Paris</option>
-                  <option>Dublin</option>
-                </select>
-              </div>
-            </form>
-            <div class="row align-items-center">
-              <div class="col">
-                <a href="inscricao.html" class="btn btn-primary btn-lg btn-block">Comprar Plano</a>
-              </div>
-              <div class="col">
-                <span class="h4">R$5.000</span>
-              </div>
+        <div class="col-lg-6 mb-5">
+          <form class="shadow bg-light p-4 rounded">
+            <div class="form-group">
+              <label for="nomeContato">Nome</label>
+              <input type="text" class="form-control" id="nomeContato" placeholder="Digite seu nome completo">
             </div>
-          </div>
+            <div class="form-group">
+              <label for="emailContato">Email</label>
+              <input type="email" class="form-control" id="emailContato" placeholder="Digite seu email">
+            </div>
+            <div class="form-group">
+              <label for="mensagemContato">Mensagem</label>
+              <textarea class="form-control" id="mensagemContato" rows="5"></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Enviar mensagem</button>
+          </form>
         </div>
-        <div class="col-md mb-5">
-          <div class="bg-light rounded p-4 box-shadow">
-            <h2>Platinum <span class="badge badge-success">Novo</span></h2>
-            <ul class="list-unstyled lista-plano">
-              <li>→ 60 dias de viagem</li>
-              <li>→ 6 destinos diferentes</li>
-              <li>→ Tudo pago pela empresa</li>
-              <li>→ Ingressos para festas</li>
-            </ul>
-            <form>
-              <div class="form-group">
-                <select class="form-control bg-light" id="inputCidades">
-                  <option>Selecione a cidade</option>
-                  <option>California</option>
-                  <option>Paris</option>
-                  <option>Dublin</option>
-                </select>
-              </div>
-            </form>
-            <div class="row align-items-center">
-              <div class="col">
-                <a href="inscricao.html" class="btn btn-primary btn-lg btn-block">Comprar Plano</a>
-              </div>
-              <div class="col">
-                <span class="h4">R$7.500</span>
-              </div>
-            </div>
-          </div>
+
+        <div class="col-lg-6">
+          <h2 class="h6">NOSSO ENDEREÇO</h2>
+          <a href="#"><img src="img/mapa.png" alt="mapa" class="img-fluid rounded shadow-sm mb-4"></a>
+
+          <h2 class="h6">DADOS DE CONTATO</h2>
+          <ul class="list-unstyled text-secondary">
+            <li>caravan@caravan.com.br</li>
+            <li>21 99999-9999</li>
+            <li>De Seg. à Sex. das 8h às 18h</li>
+          </ul>
+
+          <h2 class="h6">REDES SOCIAIS</h2>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#" class="btn btn-outline-secondary btn-block btn-sm mb-2" style="max-width: 180px;">Facebook</a>
+            </li>
+            <li>
+              <a href="#" class="btn btn-outline-secondary btn-block btn-sm mb-2" style="max-width: 180px;">Twitter</a>
+            </li>
+            <li>
+              <a href="#" class="btn btn-outline-secondary btn-block btn-sm mb-2" style="max-width: 180px;">Youtube</a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
   </section>
-  <!-- PLANOS FIM -->
+  <!-- FALE CONOSCO FIM -->
 
   <!-- RODAPÉ INICIO -->
   <footer class="bg-dark text-white">
@@ -200,7 +180,7 @@
               <a href="#" class="btn btn-outline-secondary btn-block btn-sm mb-2" style="max-width: 140px;">Twitter</a>
             </li>
             <li>
-              <a href="#" class="btn btn-outline-secondary btn-block btn-sm mb-2" style="max-width: 140px;">Facebook</a>
+              <a href="#" class="btn btn-outline-secondary btn-block btn-sm mb-2" style="max-width: 140px;">Youtube</a>
             </li>
           </ul>
         </div>
