--- a/inscricao.html
+++ b/inscricao.html
@@ -85,13 +85,15 @@
   </nav>
   <!-- NAVBAR FIM -->
 
-  <!-- INSCREVA-SE INICIO -->
+
   <section class="container">
     <div class="text-center py-5">
       <span class="h6 d-block">PROGRAME A VIAGEM DO SEU SONHO</span>
       <h2 class="text-primary display-4">INSCREVA-SE</h2>
     </div>
     <div class="row">
+
+      <!-- FORMULARIO INICIO -->
       <form class="col-lg-6">
         <div class="form-row">
           <div class="form-group col-md-6">
@@ -134,6 +136,75 @@
             <input type="text" class="form-control" placeholder="xxxxx-xxx" id="inputCEP">
           </div>
         </div>
+        <!-- FORMULARIO INICIO -->
+
+        <!-- PAGAMENTO INICIO -->
+        <div class="bg-light p-3 shadow form-group rounded">
+          <h2 class="h6 text-primary">FORMA DE PAGAMENTO</h2>
+          <nav class="nav btn-group mb-3" id="formaPagamento" role="tablist">
+            <button type="button" class="btn btn-secondary btn-sm active" id="nav-cartao-tab" data-toggle="tab"
+              href="#nav-cartao" role="tab" aria-controls="nav-cartao" aria-selected="true">
+              Cartão de Crédito
+            </button>
+
+            <button type="button" class="btn btn-secondary btn-sm " id="nav-boleto-tab" data-toggle="tab"
+              href="#nav-boleto" role="tab" aria-controls="nav-boleto" aria-selected="false">Boleto Bancário</button>
+          </nav>
+          <div class="tab-content" id="formaPagamentoConteudo">
+            <div id="nav-cartao" role="tabpanel" class="tab-pane fade active show" aria-labelledby="nav-cartao-tab">
+              <div class="form-row">
+                <div class="form-group col-md-6">
+                  <label for="inputNomeCartao">Nome do Cartão</label>
+                  <input type="text" class="form-control" id="inputNomeCartao" placeholder="Nome impresso no cartão">
+                </div>
+                <div class="form-group col-md-3 col-6">
+                  <label for="inputMesCartao">Mês</label>
+                  <select id="inputCartaoMes" class="form-control">
+                    <option>Expira mês...</option>
+                    <option value="">01</option>
+                    <option value="">02</option>
+                    <option value="">03</option>
+                    <option value="">04</option>
+                    <option value="">05</option>
+                    <option value="">06</option>
+                    <option value="">07</option>
+                    <option value="">08</option>
+                    <option value="">09</option>
+                    <option value="">10</option>
+                    <option value="">11</option>
+                    <option value="">12</option>
+                  </select>
+                </div>
+                <div class="form-group col-md-3 col-6">
+                  <label for="inputCartaoAno">Ano</label>
+                  <input type="text" class="form-control" placeholder="xxxx" id="inputCartaoAno">
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="inputCartaoNumero">Número do Cartão</label>
+                  <input type="text" class="form-control" id="inputCartaoNumero" placeholder="5555 5555 5555 5555">
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="inputCartaoCodigo">Código de Segurança</label>
+                  <input type="text" id="inputCartaoCodigo" placeholder="xxx" class="form-control">
+                </div>
+              </div>
+            </div>
+            <div class="tab-pane fade" id="nav-boleto" role="tabpanel" aria-labelledby="nav-boleto-tab">
+              <p class="lead">
+                Clique em contratar plano que enviaremos um boleto para o seu e-mail.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="form-check mb-2">
+          <label class="form-check-label">
+            <input type="checkbox" class="form-check-input">
+            Concordo com os
+            <a href="#">Termos e Condições</a>
+          </label>
+        </div>
+        <button type="submit" class="btn btn-primary btn-lg">Contratar Plano</button>
+        <!-- PAGAMENTO FIM -->
 
       </form>
     </div>
@@ -142,7 +213,7 @@
   <!-- INSCREVA-SE FIM -->
 
   <!-- RODAPÉ INICIO -->
-  <footer class="bg-dark text-white">
+  <footer class="bg-dark text-white my-5">
     <div class="container py-5">
       <div class="row">
         <div class="col-6 col-md-3">
